[gd_scene load_steps=49 format=2]

[ext_resource path="res://Scripts/CombatTest.gd" type="Script" id=1]
[ext_resource path="res://Sprites/MC.png" type="Texture" id=2]
[ext_resource path="res://Scripts/DiceSelector.gd" type="Script" id=3]
[ext_resource path="res://Scripts/DiceField.gd" type="Script" id=4]
[ext_resource path="res://Sprites/Demon1.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Background.png" type="Texture" id=6]
[ext_resource path="res://Sprites/DiceBackground.png" type="Texture" id=7]
[ext_resource path="res://Sprites/HBorder.png" type="Texture" id=8]
[ext_resource path="res://UI/CelticHand.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://Sprites/bagInside.png" type="Texture" id=10]
[ext_resource path="res://UI/my_theme.tres" type="Theme" id=11]
[ext_resource path="res://UI/BarTheme.tres" type="Theme" id=12]
[ext_resource path="res://Scripts/AffinityBar.gd" type="Script" id=13]
[ext_resource path="res://Sprites/LightMask.png" type="Texture" id=14]
[ext_resource path="res://UI/Roboto-Medium.ttf" type="DynamicFontData" id=15]
[ext_resource path="res://Scripts/VicotryScreen.gd" type="Script" id=16]
[ext_resource path="res://DiceSprites/Target.png" type="Texture" id=17]
[ext_resource path="res://FadeOut.gd" type="Script" id=18]
[ext_resource path="res://UI/EventTheme.tres" type="Theme" id=19]
[ext_resource path="res://MainBattleCamera.gd" type="Script" id=20]
[ext_resource path="res://Music/GamblersBattle.wav" type="AudioStream" id=21]
[ext_resource path="res://Sounds/DiceDown.wav" type="AudioStream" id=22]
[ext_resource path="res://Sounds/DiceUp.wav" type="AudioStream" id=23]
[ext_resource path="res://Sounds/EnemyCrit.wav" type="AudioStream" id=24]
[ext_resource path="res://Sounds/EnemyDead.wav" type="AudioStream" id=25]
[ext_resource path="res://Sounds/EnemyHit.wav" type="AudioStream" id=26]
[ext_resource path="res://Sounds/DiceBreak.wav" type="AudioStream" id=27]
[ext_resource path="res://Sounds/DiceRoll.wav" type="AudioStream" id=28]
[ext_resource path="res://DiceSprites/Heal.png" type="Texture" id=29]
[ext_resource path="res://DiceSprites/DiceBreak.png" type="Texture" id=30]
[ext_resource path="res://DiceSprites/Shield.png" type="Texture" id=31]
[ext_resource path="res://Map/Help.png" type="Texture" id=32]
[ext_resource path="res://Instructions.gd" type="Script" id=33]

[sub_resource type="Animation" id=6]
resource_name = "Crit"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Light2D:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0.0, 2.0, 0.0, 2.0, 0.0, 2.0, 0.0, 2.0, 0.0, 2.0, 0.0, 2.0, 0.0 ]
}

[sub_resource type="Animation" id=8]
resource_name = "Die"
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95, 1, 1.05, 1.1, 1.15 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( -1, 0 ), Vector2( 1, 0 ), Vector2( -1, 0 ), Vector2( 1, 0 ), Vector2( -1, 0 ), Vector2( 1, 0 ), Vector2( -1, 0 ), Vector2( 1, 0 ), Vector2( -1, 0 ), Vector2( 1, 0 ), Vector2( -1, 0 ), Vector2( 1, 0 ), Vector2( -1, 0 ), Vector2( 1, 0 ), Vector2( -1, 0 ), Vector2( 1, 0 ), Vector2( -1, 0 ), Vector2( 1, 0 ), Vector2( -1, 0 ), Vector2( 1, 0 ), Vector2( -1, 0 ), Vector2( 1, 0 ), Vector2( -1, 0 ), Vector2( 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../EnemyName:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "Hurt"
tracks/0/type = "value"
tracks/0/path = NodePath("Light2D:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Light2D:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 2.0, 0.0 ]
}

[sub_resource type="Animation" id=18]
resource_name = "Target"
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.25, 0.25 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="DynamicFont" id=9]
size = 32
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=10]
size = 18
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=11]
size = 14
font_data = ExtResource( 15 )

[sub_resource type="Animation" id=12]
resource_name = "Bag"
length = 3.0
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("VictoryPanel/Spoils/DiceBag:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("VictoryPanel/Spoils/Dice1:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("VictoryPanel/Spoils/Dice2:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1.5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("VictoryPanel/Spoils/Dice3:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("VictoryPanel/Spoils/Gold:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 2.5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("VictoryPanel/Return:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 3 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=13]
resource_name = "Both"

[sub_resource type="Animation" id=14]
resource_name = "Gold"

[sub_resource type="Animation" id=15]
resource_name = "RareBag"

[sub_resource type="Animation" id=16]
resource_name = "RareBoth"

[sub_resource type="Animation" id=17]
resource_name = "Relic"

[sub_resource type="BitmapFont" id=4]

[sub_resource type="Theme" id=5]
default_font = SubResource( 4 )

[node name="CombatTest" type="Node"]
script = ExtResource( 1 )

[node name="PeoplePlane" type="Node2D" parent="."]
position = Vector2( -2, 354 )
__meta__ = {
"_edit_lock_": true
}

[node name="Background" type="Sprite" parent="PeoplePlane"]
position = Vector2( 685, 114 )
scale = Vector2( 2.66406, 2.05469 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="MCSprite" type="Sprite" parent="PeoplePlane"]
position = Vector2( 507, 124 )
scale = Vector2( 5, 5 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="EnemyName" type="Label" parent="PeoplePlane"]
margin_left = 860.0
margin_top = 66.0
margin_right = 951.0
margin_bottom = 85.0
theme = ExtResource( 11 )
text = "Lesser Demon"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="EnemySprite" type="Sprite" parent="PeoplePlane"]
light_mask = 2
position = Vector2( 906, 131 )
scale = Vector2( 5, 5 )
texture = ExtResource( 5 )
offset = Vector2( -1, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="EnemyAnimations" type="AnimationPlayer" parent="PeoplePlane/EnemySprite"]
anims/Crit = SubResource( 6 )
anims/Die = SubResource( 8 )
anims/Hurt = SubResource( 7 )

[node name="Light2D" type="Light2D" parent="PeoplePlane/EnemySprite"]
position = Vector2( -6.8, 3.6 )
texture = ExtResource( 14 )
color = Color( 1, 0, 0, 1 )
energy = 0.0
range_item_cull_mask = 2

[node name="Target" type="Sprite" parent="PeoplePlane/EnemySprite"]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( -1.60001, -1 )
rotation = 3.14159
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 17 )

[node name="TargetAnimation" type="AnimationPlayer" parent="PeoplePlane/EnemySprite/Target"]
anims/Target = SubResource( 18 )

[node name="MCHearts" type="Node2D" parent="PeoplePlane"]
__meta__ = {
"_edit_lock_": true
}

[node name="EnemyHearts" type="Node2D" parent="PeoplePlane"]
__meta__ = {
"_edit_lock_": true
}

[node name="VictoryScreen" type="Control" parent="."]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -697.0
margin_bottom = 333.0
theme = ExtResource( 11 )
script = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VictoryPanel" type="Panel" parent="VictoryScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VICTORY" type="Label" parent="VictoryScreen/VictoryPanel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -67.5
margin_top = 16.0
margin_right = 67.5
margin_bottom = 50.0
custom_fonts/font = SubResource( 9 )
text = "VICTORY!"

[node name="EnemyDefeated" type="Label" parent="VictoryScreen/VictoryPanel/VICTORY"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -167.5
margin_top = -2.0
margin_right = 175.5
margin_bottom = 32.0
custom_fonts/font = SubResource( 10 )
text = "Lesser Demon Defeated"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spoils" type="VBoxContainer" parent="VictoryScreen/VictoryPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -158.5
margin_top = -87.5
margin_right = 161.5
margin_bottom = -47.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DiceBag" type="RichTextLabel" parent="VictoryScreen/VictoryPanel/Spoils"]
margin_right = 320.0
margin_bottom = 18.0
rect_min_size = Vector2( 320, 0 )
custom_fonts/normal_font = SubResource( 11 )
bbcode_enabled = true
bbcode_text = "Dice Bag Recovered"
text = "Dice Bag Recovered"
fit_content_height = true
scroll_active = false

[node name="Dice1" type="RichTextLabel" parent="VictoryScreen/VictoryPanel/Spoils"]
margin_top = 22.0
margin_right = 320.0
margin_bottom = 40.0
rect_min_size = Vector2( 320, 0 )
custom_fonts/normal_font = SubResource( 11 )
bbcode_enabled = true
bbcode_text = "	-Acquired new dice: Pyramido"
text = "	-Acquired new dice: Pyramido"
fit_content_height = true
scroll_active = false

[node name="Dice2" type="RichTextLabel" parent="VictoryScreen/VictoryPanel/Spoils"]
margin_top = 44.0
margin_right = 320.0
margin_bottom = 62.0
rect_min_size = Vector2( 320, 0 )
custom_fonts/normal_font = SubResource( 11 )
bbcode_enabled = true
bbcode_text = "	-Acquired new dice: Pyramido"
text = "	-Acquired new dice: Pyramido"
fit_content_height = true
scroll_active = false

[node name="Dice3" type="RichTextLabel" parent="VictoryScreen/VictoryPanel/Spoils"]
margin_top = 66.0
margin_right = 320.0
margin_bottom = 84.0
rect_min_size = Vector2( 320, 0 )
custom_fonts/normal_font = SubResource( 11 )
bbcode_enabled = true
bbcode_text = "	-Acquired new dice: Pyramido"
text = "	-Acquired new dice: Pyramido"
fit_content_height = true
scroll_active = false

[node name="Gold" type="RichTextLabel" parent="VictoryScreen/VictoryPanel/Spoils"]
margin_top = 88.0
margin_right = 320.0
margin_bottom = 106.0
rect_min_size = Vector2( 320, 0 )
custom_fonts/normal_font = SubResource( 11 )
bbcode_enabled = true
bbcode_text = "Dice Bag Recovered"
text = "Dice Bag Recovered"
fit_content_height = true
scroll_active = false

[node name="Relic" type="RichTextLabel" parent="VictoryScreen/VictoryPanel/Spoils"]
margin_top = 110.0
margin_right = 320.0
margin_bottom = 128.0
rect_min_size = Vector2( 320, 0 )
custom_fonts/normal_font = SubResource( 11 )
bbcode_enabled = true
bbcode_text = "Dice Bag Recovered"
text = "Dice Bag Recovered"
fit_content_height = true
scroll_active = false

[node name="Return" type="Button" parent="VictoryScreen/VictoryPanel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -57.5
margin_top = -49.0
margin_right = 56.5
margin_bottom = -22.0
text = "Return to Map"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VictoryAnimation" type="AnimationPlayer" parent="VictoryScreen"]
anims/Bag = SubResource( 12 )
anims/Both = SubResource( 13 )
anims/Gold = SubResource( 14 )
anims/RareBag = SubResource( 15 )
anims/RareBoth = SubResource( 16 )
anims/Relic = SubResource( 17 )

[node name="DiceField" type="Node2D" parent="."]
position = Vector2( 315, 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Background" type="Sprite" parent="DiceField"]
position = Vector2( 368.5, 167 )
scale = Vector2( 1.06406, 0.880208 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="Dice" type="Node2D" parent="DiceField"]

[node name="Roll" type="Button" parent="DiceField"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = 609.0
margin_top = -1.0
margin_right = 709.0
margin_bottom = 42.0
text = "Roll"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="DiceField"]
margin_left = 321.0
margin_top = 64.0
margin_right = 411.0
margin_bottom = 104.0
theme = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="DiceField/HBoxContainer"]
margin_top = 9.0
margin_right = 72.0
margin_bottom = 30.0
text = "Total Roll:"

[node name="Total" type="Label" parent="DiceField/HBoxContainer"]
margin_left = 76.0
margin_top = 9.0
margin_right = 76.0
margin_bottom = 30.0

[node name="HBorder" type="Sprite" parent="."]
position = Vector2( 507, 342 )
scale = Vector2( 2, 2 )
texture = ExtResource( 8 )

[node name="DiceSelector" type="Control" parent="."]
margin_right = 342.0
margin_bottom = 600.0
theme = ExtResource( 11 )
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ReferenceRect" type="ReferenceRect" parent="DiceSelector"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 5 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="DiceSelector"]
margin_right = 342.0
margin_bottom = 600.0
texture = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="DiceSelector"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -2.0
margin_bottom = -16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="DiceSelector/MarginContainer"]
margin_right = 332.0
margin_bottom = 576.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="OptionContainer" type="VBoxContainer" parent="DiceSelector/MarginContainer/ScrollContainer"]

[node name="Sprite" type="Sprite" parent="DiceSelector"]
position = Vector2( 358, 84 )
rotation = 1.5708
scale = Vector2( 2, 2 )
texture = ExtResource( 8 )

[node name="AffinityBar" type="Control" parent="."]
margin_left = 674.0
margin_top = 320.0
margin_right = 714.0
margin_bottom = 360.0
theme = ExtResource( 12 )
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="FadeOut" type="ColorRect" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )
script = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="CanvasLayer/FadeOut"]

[node name="Instructions" type="ColorRect" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 11 )
color = Color( 0, 0, 0, 0.458824 )
script = ExtResource( 33 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Instructions"]
margin_left = 422.0
margin_top = 409.0
margin_right = 517.0
margin_bottom = 433.0
text = "Your Health"

[node name="Label2" type="Label" parent="CanvasLayer/Instructions"]
margin_left = 854.0
margin_top = 406.0
margin_right = 979.0
margin_bottom = 430.0
text = "Enemy's Health"

[node name="Label3" type="Label" parent="CanvasLayer/Instructions"]
margin_left = 462.0
margin_top = 305.0
margin_right = 799.0
margin_bottom = 356.0
text = "Hover over each range to see what it is"

[node name="Label4" type="Label" parent="CanvasLayer/Instructions"]
margin_left = 773.0
margin_top = 195.0
margin_right = 1110.0
margin_bottom = 327.0
text = "CRIT: 2 damage to enemy
DAMAGE: 1 damage to enemy
ATTACK: 1 damage to enemy,
1 damage to player
FAIL: 1 damage to player"

[node name="Label5" type="Label" parent="CanvasLayer/Instructions"]
margin_left = 6.0
margin_top = 12.0
margin_right = 343.0
margin_bottom = 144.0
text = "Select a dice from your pouch to add it
to the field"

[node name="Label6" type="Label" parent="CanvasLayer/Instructions"]
margin_left = 500.0
margin_top = 125.0
margin_right = 885.0
margin_bottom = 257.0
text = "Click a dice on the field to return it to your pouch"

[node name="Label7" type="Label" parent="CanvasLayer/Instructions"]
margin_left = 821.0
margin_top = 36.0
margin_right = 1206.0
margin_bottom = 168.0
text = "Click here to roll the dice"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label9" type="Label" parent="CanvasLayer/Instructions"]
margin_left = 4.0
margin_top = 171.0
margin_right = 389.0
margin_bottom = 303.0
text = "Some rolls will have special properties
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="CanvasLayer/Instructions"]
position = Vector2( 49, 256 )
texture = ExtResource( 30 )

[node name="Label8" type="Label" parent="CanvasLayer/Instructions/Sprite"]
margin_left = 19.0
margin_top = -13.0
margin_right = 404.0
margin_bottom = 119.0
text = "The die breaks"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite2" type="Sprite" parent="CanvasLayer/Instructions"]
position = Vector2( 50, 290 )
texture = ExtResource( 31 )

[node name="Label8" type="Label" parent="CanvasLayer/Instructions/Sprite2"]
margin_left = 19.0
margin_top = -13.0
margin_right = 404.0
margin_bottom = 119.0
text = "Blocks all damage to you this turn"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite3" type="Sprite" parent="CanvasLayer/Instructions"]
position = Vector2( 49, 330 )
texture = ExtResource( 29 )

[node name="Label8" type="Label" parent="CanvasLayer/Instructions/Sprite3"]
margin_left = 19.0
margin_top = -13.0
margin_right = 404.0
margin_bottom = 119.0
text = "Heals if not at max health"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite4" type="Sprite" parent="CanvasLayer/Instructions"]
position = Vector2( 48, 367 )
texture = ExtResource( 17 )

[node name="Label8" type="Label" parent="CanvasLayer/Instructions/Sprite4"]
margin_left = 19.0
margin_top = -13.0
margin_right = 404.0
margin_bottom = 119.0
text = "Damage to enemy increased by 1
this round"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainCamera" type="Camera2D" parent="."]
position = Vector2( 513, 300 )
current = true
zoom = Vector2( 0.1, 0.1 )
script = ExtResource( 20 )

[node name="CameraTween" type="Tween" parent="MainCamera"]

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 21 )
autoplay = true

[node name="DiceDown" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 22 )
volume_db = 5.0

[node name="DiceUp" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 23 )
volume_db = 5.0

[node name="Roll" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 28 )

[node name="DiceBreak" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 27 )

[node name="BothHit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 22 )
volume_db = -10.0

[node name="EnemyHit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 26 )
volume_db = -10.0

[node name="EnemyCrit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 24 )
volume_db = -10.0

[node name="EnemyDead" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 25 )
volume_db = -10.0

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 981.0
margin_top = 551.0
margin_right = 1029.0
margin_bottom = 601.0
texture_normal = ExtResource( 32 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VictoryScreen/VictoryPanel/Return" to="." method="_on_Return_pressed"]
[connection signal="pressed" from="DiceField/Roll" to="." method="_on_Roll_pressed"]
[connection signal="tween_all_completed" from="CanvasLayer/FadeOut/Tween" to="CanvasLayer/FadeOut" method="_on_Tween_tween_all_completed"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
